syntax = "proto3";

package category;
option go_package = "github.com/swiggy-2022-bootcamp/cdp-team2/common/protos/category";

message GetCategoryInput{
    int32 category_id = 1;
}

message GetCategoryOutput{
    int32 category_id = 1;
    string name = 2;
}

service CategoryService {

    rpc GetCategory(GetCategoryInput) returns (GetCategoryOutput);

}

